# boa-sarima-forecaster

./: .coveragerc-core  .gitignore  .mailmap  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  config.example.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: README.md  sample_data.csv
docs/: cli.md  ensemble.md  extending_models.md  methodology.md
docs/adr/: ADR-001-modelspec-protocol.md  ADR-002-optimizer-soft-failure.md  ADR-003-combined-metric-weights.md  README.md
notebooks/: demo.ipynb
scripts/: forecast_by_group.py  forecast_full.py  generate_plots.py  generate_readme_plots.py  plot_forecasts_by_group.py
src/boa_forecaster/: __init__.py  __main__.py  benchmarks.py  config.py  config_schema.py  data_loader.py  features.py  metrics.py  metrics_probabilistic.py  optimizer.py  postprocess.py  preprocessor.py  standardization.py  validation.py
src/boa_forecaster/cli/: __init__.py  _pipeline.py  compare.py  run.py  validate.py
src/boa_forecaster/models/: __init__.py  _ml_base.py  _utils.py  base.py  ensemble.py  lightgbm.py  lstm.py  prophet.py  quantile.py  random_forest.py  sarima.py  xgboost.py
src/boa_forecaster/presets/: __init__.py  air_quality.py
src/sarima_bayes/: __init__.py  benchmarks.py  config.py  data_loader.py  metrics.py  model.py  optimizer.py  preprocessor.py  standardization.py  validation.py
tasks/: lessons.md  v2_plan.md
tests/: conftest.py
tests/integration/: test_bias_correction_e2e.py  test_full_pipeline.py  test_multi_model.py
tests/perf/: test_bench_fill_blanks.py  test_bench_optimize_sarima.py  test_bench_weighted_moving.py
tests/unit/: test_base.py  test_benchmarks.py  test_benchmarks_v2.py  test_cli.py  test_config_schema.py  test_data_loader.py  test_data_loader_errors.py  test_deprecation.py  test_ensemble.py  test_features.py  test_lightgbm.py  test_lstm.py  test_metrics.py  test_metrics_bucketed.py  test_metrics_probabilistic.py  test_metrics_property.py  test_ml_base.py  test_optimizer.py  test_optimizer_generic.py  test_optimizer_stress.py  test_optional_deps.py  test_postprocess.py  test_preprocessor.py  test_prophet.py  test_quantile.py  test_random_forest.py  test_sarima_constraints.py  test_sarima_hourly.py  test_sarima_spec.py  test_standardization.py  test_validation.py  test_wma_constant.py  test_xgboost.py
tests/unit/presets/: test_air_quality.py
