[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sarima-bayes"
version = "2.0.0"
description = "Bayesian TPE optimization framework for time series forecasting"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "statsmodels>=0.14",
    "optuna>=3.4",
    "openpyxl>=3.1",
    "joblib>=1.3",
    "statsforecast>=1.7",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
notebooks = [
    "matplotlib>=3.7",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1",
]
sklearn = [
    "scikit-learn>=1.3",
]
xgboost = [
    "xgboost>=2.0",
]
lightgbm = [
    "lightgbm>=4.0",
]
ml = [
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "lightgbm>=4.0",
]
all = [
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "matplotlib>=3.7",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
"notebooks/*.ipynb" = ["E402"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests that call external ML libraries and take longer to run (deselect with '-m not slow')",
    "requires_sklearn: tests that need scikit-learn installed",
    "requires_xgboost: tests that need xgboost installed",
    "requires_lightgbm: tests that need lightgbm installed",
    "integration: multi-model end-to-end tests",
]
