[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sarima-bayes"
version = "2.1.0"
description = "Bayesian TPE optimization framework for time series forecasting"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "statsmodels>=0.14",
    "optuna>=3.4",
    "openpyxl>=3.1",
    "joblib>=1.3",
    "statsforecast>=1.7",
    "click>=8",
    "pydantic>=2",
    "PyYAML>=6",
]

[project.scripts]
boa-forecaster = "boa_forecaster.cli:cli"

[project.optional-dependencies]
notebooks = [
    "matplotlib>=3.7",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-benchmark>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "hypothesis>=6.0",
    "mypy>=1.8",
    "bandit>=1.7",
]
sklearn = [
    "scikit-learn>=1.3",
]
xgboost = [
    "xgboost>=2.0",
]
lightgbm = [
    "lightgbm>=4.0",
]
ml = [
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "lightgbm>=4.0",
]
all = [
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "matplotlib>=3.7",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
"notebooks/*.ipynb" = ["E402"]
# Pydantic v2 evaluates model-field annotations at runtime. On Python 3.9
# PEP 604 `X | None` raises TypeError, so this file must use typing.Optional /
# typing.Union despite the project-wide UP preference.
"src/boa_forecaster/config_schema.py" = ["UP007", "UP045"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests that call external ML libraries and take longer to run (deselect with '-m not slow')",
    "requires_sklearn: tests that need scikit-learn installed",
    "requires_xgboost: tests that need xgboost installed",
    "requires_lightgbm: tests that need lightgbm installed",
    "integration: multi-model end-to-end tests",
    "perf: performance regression benchmarks (pytest-benchmark); skipped unless explicitly run",
]

[tool.mypy]
# Targets the lowest supported Python version so CI catches 3.9-incompatible
# typing (e.g. accidental PEP 604 `X | Y` in value position, missing
# `from __future__ import annotations`).
python_version = "3.9"
# Optional third-party deps (optuna, statsmodels, sklearn, xgboost, lightgbm,
# statsforecast, joblib) ship no or partial stubs — silencing them keeps the
# signal focused on our own src/ code.
ignore_missing_imports = true
